--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jsonwebtoken": "^7.4.3",
     "lodash": "^4.17.4",
     "material-ui": "^0.18.7",
+    "mongojs": "^2.4.1",
     "mongoose": "^4.11.7",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
